[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "robotpy-cli"
dynamic = ["version"]

readme = "README.md"
requires-python = ">= 3.8"

[[project.authors]]
name = "Dustin Spicuzza"
email = "robotpy@googlegroups.com"

[project.license]
file = "LICENSE"

[project.scripts]
robotpy = "robotpy.main:main"

[project.urls]
repository = "https://github.com/robotpy/robotpy-cli"

[tool.setuptools_scm]
