[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "robotpy-cli"
dynamic = ["version"]

readme = "README.md"
requires-python = ">= 3.8"

[[project.authors]]
name = "Dustin Spicuzza"
email = "robotpy@googlegroups.com"

[project.license]
file = "LICENSE"

[project.scripts]
robotpy = "robotpy.main:main"

[project.urls]
repository = "https://github.com/robotpy/robotpy-cli"

[tool.hatch.build.targets.wheel]
packages = ["robotpy"]

[tool.hatch.version]
source = "vcs"
